--- a/HTML/lessons/lession 3/index.html
+++ b/HTML/lessons/lession 3/index.html
@@ -2,18 +2,24 @@
     <html>
 
     <head>
-
+    <title>Главная страница</title>
     </head>
 
     <body>
-        <h1>Welcome to the club</h1>
-        <p>
+    <h1>Welcome to the club</h1>
+    <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos placeat possimus atque molestias fugit? Ab tempore ducimus eius dicta voluptatibus doloribus accusamus, impedit pariatur tempora natus, voluptatem eveniet odit sequi!
-        </p>
-        <h2>hELLO</h2>
-        <p>
+    </p>
+    <h2>hELLO</h2>
+    <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse nostrum labore fuga impedit, quod blanditiis facere doloribus asperiores rem deleniti, vel neque in aspernatur, consequatur aliquam ipsa at! Eos, quisquam.
-        </p>
+    </p>
+    <h3>Goodbye</h3>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nesciunt at sequi error dignissimos corporis voluptatum quos officiis. Aut id distinctio molestiae dicta esse doloribus unde dolor sit itaque. Libero?
+    <a>href="https://cleverland.by"</a>
+    </p>
+    <h4> зАГОЛОВОК 4</h4>
     </body>
 
     </html>
